[gd_scene load_steps=16 format=3 uid="uid://uarugnx1gljb"]

[ext_resource type="Script" path="res://UI/upgrade_card.gd" id="1_benln"]
[ext_resource type="Texture2D" uid="uid://bictl1ubjaau0" path="res://assets/Basic Items.png" id="2_6i2si"]
[ext_resource type="Texture2D" uid="uid://emau8dp4fqpx" path="res://assets/Glow_Background.png" id="3_yxxsx"]
[ext_resource type="StyleBox" uid="uid://btbtswtbq2102" path="res://button_focus.tres" id="4_4ir7t"]
[ext_resource type="StyleBox" uid="uid://cumvo6rguxrma" path="res://styles/Disabled_buy_button.tres" id="5_lcu3s"]
[ext_resource type="StyleBox" uid="uid://b2mv4wr1odhnx" path="res://styles/normal_max_button.tres" id="6_17u43"]
[ext_resource type="StyleBox" uid="uid://b1ba2pu1l6a3m" path="res://styles/normal_buy_button.tres" id="7_y2clt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tvyci"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_56gpc"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7njfd"]
bg_color = Color(0, 0, 0, 1)
corner_radius_bottom_left = 20

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydby"]
atlas = ExtResource("2_6i2si")
region = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rinkn"]
content_margin_top = 5.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 0.235294, 0.745098, 1)
border_color = Color(0.686275, 0.0941176, 0.490196, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 5.0
anti_aliasing = false

[sub_resource type="Theme" id="Theme_g3cap"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_asren"]
content_margin_left = 20.0
content_margin_right = 20.0
bg_color = Color(1, 0.525214, 0.806687, 1)
border_width_left = 7
border_width_bottom = 7
border_color = Color(0.914247, 0.260623, 0.673693, 1)
corner_radius_bottom_left = 20
corner_detail = 6
expand_margin_left = 10.0
expand_margin_top = 15.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_th0ea"]
content_margin_left = 20.0
content_margin_right = 20.0
bg_color = Color(1, 0.235294, 0.745098, 1)
border_width_left = 2
border_width_bottom = 2
border_color = Color(0.686275, 0.0941176, 0.490196, 1)
corner_radius_bottom_left = 20
corner_detail = 6
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0
anti_aliasing = false

[node name="upgrade_card" type="Panel"]
custom_minimum_size = Vector2(1000, 200)
offset_right = 1000.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_tvyci")
script = ExtResource("1_benln")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 0
offset_right = 900.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_56gpc")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
custom_minimum_size = Vector2(900, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Upgarde_Content_Panel" type="Panel" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7njfd")

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/Upgarde_Content_Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Upgarde_Content" type="HBoxContainer" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Upgrade_Icons" type="TextureRect" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/Upgarde_Content"]
z_as_relative = false
layout_mode = 2
size_flags_horizontal = 0
texture = SubResource("AtlasTexture_8ydby")
expand_mode = 3
stretch_mode = 4

[node name="Background_Glow" type="TextureRect" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/Upgarde_Content/Upgrade_Icons"]
modulate = Color(1, 1, 1, 0.72549)
show_behind_parent = true
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_yxxsx")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/Upgarde_Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/Upgarde_Content/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "place holder"

[node name="level_panel" type="Panel" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/Upgarde_Content/VBoxContainer/Title"]
custom_minimum_size = Vector2(30, 0)
layout_direction = 2
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -17.5
offset_right = -3.0
offset_bottom = 7.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rinkn")

[node name="level" type="Label" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/Upgarde_Content/VBoxContainer/Title/level_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -17.0
offset_right = 40.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "(0/8)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/Upgarde_Content/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_font_sizes/font_size = 24
text = "placeholder"
autowrap_mode = 3

[node name="buy_section" type="VBoxContainer" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = SubResource("Theme_g3cap")
theme_override_constants/separation = 10

[node name="spacer2" type="Control" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/buy_section"]
layout_mode = 2

[node name="spacer" type="Control" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/buy_section"]
layout_mode = 2

[node name="Max" type="Button" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/buy_section"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = ExtResource("4_4ir7t")
theme_override_styles/disabled = ExtResource("5_lcu3s")
theme_override_styles/hover = SubResource("StyleBoxFlat_asren")
theme_override_styles/pressed = SubResource("StyleBoxFlat_th0ea")
theme_override_styles/normal = ExtResource("6_17u43")
text = "100$  | MAX"

[node name="spacer3" type="Control" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/buy_section"]
layout_mode = 2

[node name="large_spacer" type="Control" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/buy_section"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Buy" type="Button" parent="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/buy_section"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = ExtResource("4_4ir7t")
theme_override_styles/disabled = ExtResource("5_lcu3s")
theme_override_styles/hover = SubResource("StyleBoxFlat_asren")
theme_override_styles/pressed = ExtResource("7_y2clt")
theme_override_styles/normal = ExtResource("7_y2clt")
text = "100$  | MAX"

[connection signal="pressed" from="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/buy_section/Max" to="." method="_on_max_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/Upgarde_Content_Panel/MarginContainer/buy_section/Buy" to="." method="_on_buy_pressed"]
